--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <head>
     <!-- change this to your project name -->
-    <title>reqwest-w-egui-testing</title>
+    <title>http-client</title>
 
     <!-- config for our rust wasm binary. go to https://trunkrs.dev/assets/#rust for more customization -->
     <link data-trunk rel="rust" data-wasm-opt="2" />
